--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --bg--white-100: #fdf9ff;
     --bg--white-50: #e8dfec;
     --text--white-900: #302e4d;
-    --bg--white-700: #504e70;
+    --text--white-700: #504e70;
 }
 
 *{
@@ -30,13 +30,21 @@ body{
     background: var(--bg--white-900);
     min-height: 100vh;
     display: block;
-    position: fixed;
-    left: 270px;
-    top: 0;
-    right: 0;
+    /* position: fixed; */
+    /* left: 270px; */
+    /* top: 0; */
+    /* right: 0; */
     opacity: 1;
     z-index: 0;
     padding: 0 30px;
+}
+
+.hidden{
+    display: none !important;
+}
+
+.main-content{
+    padding-left: 270px; ;
 }
 .paddings-1{
     padding-left: 15px;
@@ -48,6 +56,10 @@ body{
     width: 100%;
     margin: auto;
 }
+.section .container{
+    padding-top: 60px;
+    padding-bottom: 70px;
+}
 
 .row{
     display: flex;
@@ -55,6 +67,25 @@ body{
     margin-left: -15PX;
     margin-right: -15px;
     position: relative;
+}
+
+.btn{
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: white;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    transition: all 0.3s ease ;
+    background: var(--skin-color);
+    border: none;
+
+}
+
+.btn:hover{
+    transform: scale(1.05);
+
 }
 
 .side-bar .side-nav-toggler{
@@ -208,12 +239,32 @@ ul{
 h3.hello{
   font-size: 28px;
    margin: 15px 0;
-   color: red;
 }
 
 h3.hello span{
     font-family: 'Clicker Script', cursive;
     /* font-family: 'Clicker Script', cursive; */
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--skin-color);
+
+}
+
+h3.my-profession{
+    font-size: 30px;
+    margin: 15px 0;
+
+}
+
+.typing{
+    color: var(--skin-color);
+
+}
+
+.home-info p{
+    font-size: 20px;
+    margin-bottom: 70px;
+    color: var(--text--white-700);
 
 }
 
@@ -222,12 +273,72 @@ h3.hello span{
     max-width: 40%;
     text-align: center;
     position: relative;
+}
+.home-img::after{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    right: 20px;
+    bottom: -40px;
+    border-bottom: 10px solid var(--skin-color);
+    border-right: 10px solid var(--skin-color);
+
+}
+
+.home-img::before{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    left: -20px;
+    top: -40px;
+    bottom: -40px;
+    border-top: 10px solid var(--skin-color);
+    border-left: 10px solid var(--skin-color);
 
 }
 
 .home .home-img img{
     height: 300px ;
+    margin: auto;
+    border-radius: 5px;
+}
 
+/* about me styling */
+.section-title{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 60px;
+}
+
+.section-title h2{
+    font-size: 40px;
+    color: var(--text--white-900);
+    font-weight: 700;
+    position: relative;
+
+}
+
+.section-title h2::before{
+    content: '';
+    height: 4px;
+    width: 50px;
+    background-color: var(--skin-color);
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
+
+.section-title h2::after{
+    content: '';
+    height: 4px;
+    width: 25px;
+    background-color: var(--skin-color);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    margin-top: 8px;
 }
 
 
