--- a/style.css
+++ b/style.css
@@ -341,6 +341,19 @@ h3.my-profession{
     margin-top: 8px;
 }
 
+.about .about-me-content{
+    flex: 0 0 100%;
+    max-width: 100%;
+
+}
+
+.about .about-me-content .about-me-text{
+    flex: 0 0 100%;
+    max-width: 100%;
+    background-color: red;
+
+}
+
 
 
  
