--- a/style.css
+++ b/style.css
@@ -373,13 +373,34 @@ h3.my-profession{
  .about .about-me-content .personal-info{
     flex: 0 0 60%;
     max-width: 60%;
-    background-color: red;
+    margin-top: 40px;
+
+ }
+ .about .about-me-content .personal-info .info-item{
+    flex: 0 0 50%;
+    max-width: 50%;
+ }
+
+ .about .about-me-content .personal-info .info-item p{
+    font-weight: 600;
+    padding: 10px 0;
+    font-size: 16px;
+    color: var(--text--white-900);
+    border-radius: 1px solid var(--bg--white-50); 
+ }
+
+ .about .about-me-content .personal-info .info-item p span{
+    font-weight: 400;
+    color: var(--text--white-700);
+    margin-left: 5px;
+    display: inline-block;
 
  }
 
  .about .about-me-content .skills {
     flex: 0 0 40%;
     max-width: 40%;
+    margin-top: 40px;
     background-color: blue;
 
  }
