--- a/style.css
+++ b/style.css
@@ -371,8 +371,8 @@ h3.my-profession{
  }
 
  .about .about-me-content .personal-info{
-    flex: 0 0 60%;
-    max-width: 60%;
+    flex: 0 0  60%;
+    max-width:60%;
     margin-top: 40px;
 
  }
@@ -408,12 +408,71 @@ h3.my-profession{
  }
 
  .about .about-me-content .skills {
-    flex: 0 0 40%;
+    flex: 0 0 50%;
     max-width: 40%;
     margin-top: 40px;
-    background-color: blue;
 
  }
+
+ .about .about-me-content .skills .skills-item{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+ }
+
+ .about .about-me-content .skills .skills-item h5{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 40px;
+    color-scheme: var(--text--white-900);
+    text-transform: capitalize;
+
+ }
+
+ .about .about-me-content .skills .skills-item .progress{
+    background-color: var(--bg--white-50);
+    height: 7px;
+    border-radius: 4px;
+    width: 100%;
+    position: relative;
+
+
+ }
+
+ .about .about-me-content .skills .skills-item .progress .progress-in{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    border-radius: 4px;
+    background-color: var(--skin-color);
+
+ }
+
+ .about .about-me-content .skills .skills-item .skills-percent{
+    position: absolute;
+    right: 0;
+    color: var(--text--white-900);
+    top: -40px;
+    font-weight: 400;
+    line-height: 40px;
+
+
+ }
+
+ .about .about-me-content .education, .xperience{
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-top: 30px;
+    background : red;
+
+ }
+
+ .xperience{
+    background: blue;
+ }
+
+
 
 
 
