--- a/style.css
+++ b/style.css
@@ -551,6 +551,123 @@ h3.my-profession{
 
 }
 
+.service .container{
+    padding-bottom: 40px;
+}
+
+.service .service-item{
+    margin-bottom: 30px;
+     flex-wrap:0 0 33.33%;
+     max-width: 33.33%;
+
+}
+
+.service .service-item .service-item-inner{
+    background-color: var(--bg--white-100);
+    border:1px solid var(--bg--white-50);
+    border-radius: 10px;
+    padding: 30px 15px;
+    text-align: center;
+    transition: all 0.35 ease;
+}
+.service .service-item .service-item-inner
+:hover{
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+
+.service .service-item .service-item-inner .icon{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    display: block;
+    margin:  0 auto 30px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.service .service-item .service-item-inner .icon i{
+    font-size: 40px ;
+    line-height: 60px;
+    color: var(--skin-color);
+}
+
+.service .service-item .service-item-inner:hover .icon{
+    background-color: var(--skin-color);
+}
+
+.service .service-item .service-item-inner .icon .fa:hover{
+    font-size: 25px;
+    color: #ffffff;
+}
+
+.service .service-item .service-item-inner .icon .fas:hover{
+    font-size: 25px;
+    color: #ffffff;
+}
+
+.service .service-item .service-item-inner h4{
+    font-size: 18px;
+    margin-bottom: 15px;color: var(--text--white-900);
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.service .service-item .service-item-inner p{
+    font-size: 16px;
+    color: var(--text--white-700);
+    line-height: 25px;
+}
+
+/* portfolio styling */
+
+.portfolio .container{
+    padding-bottom: 40px;
+}
+
+.portfolio .portfolio-heading{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 40px;
+    }
+
+    .portfolio .portfolio-heading h2{
+        color: var(--text--white-900);
+        font-weight: 600;
+    }
+
+    .portfolio .portfolio-item {
+        flex: 0 0 0 33.33%;
+        max-width: 33.33%;
+        margin-bottom: 30px;
+    }
+
+    .portfolio .portfolio-item-inner{
+        border: 6px solid var(--bg--white-100);
+        border-radius: 10px;
+        overflow: hidden;
+        cursor: pointer;
+        
+    } 
+
+    .portfolio .portfolio-item-inner .portfolio-img img{
+        width: 100%;
+        display: block;
+
+    }
+
+
+
+   
+   
+
+
+
+
+
+
+
+
+
 
 
 
