--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@ body{
     font-size: 16px;
     font-family: 'Poppins';
 }
+
+body.dark{
+    --bg--white-900: #151515;
+    --bg--white-100: #222222;
+    --bg--white-50: #393939;
+    --text--white-900: #ffffff;
+    --text--white-700: #e9e9e9;
+}
   
 ::before, ::after{
     box-sizing: border-box;
