--- a/style.css
+++ b/style.css
@@ -38,22 +38,31 @@ body.dark{
     background: var(--bg--white-900);
     min-height: 100vh;
     display: block;
-    /* position: fixed; */
-    /* left: 270px; */
-    /* top: 0; */
-    /* right: 0; */
+    position: fixed;
+    left: 270px;
+    top: 0;
+    right: 0;
+    bottom: 0;
     opacity: 1;
     z-index: 0;
     padding: 0 30px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.section.active{
+    z-index: 2;
+    opacity: 1;
 }
 
 .hidden{
     display: none !important;
 }
-
+/* 
 .main-content{
     padding-left: 270px; ;
-}
+} */
+
 .paddings-1{
     padding-left: 15px;
     padding-right: 15px;
